--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SelectionLauncher</string>
     <string name="title_instagram">Instagram</string>
     <string name="title_snapchat">Snapchat</string>
+    <string name="test_description">Try selecting here, my ig/sc: librunos</string>
 </resources>
