--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">SelectionLauncher</string>
     <string name="title_instagram">Instagram</string>
     <string name="title_snapchat">Snapchat</string>
-    <string name="test_description">Try selecting here, my ig/sc:\nlibrunos</string>
+    <string name="test_description">Try selecting here, my ig/sc:\n<b>librunos</b>\nLong press the text and click 3 dots.</string>
 </resources>
